--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1311,10 +1311,6 @@ video {
   justify-items: stretch;
 }
 
-.gap-\[5\%\] {
-  gap: 5%;
-}
-
 .gap-\[5rem\] {
   gap: 5rem;
 }
@@ -1323,12 +1319,8 @@ video {
   gap: 1rem;
 }
 
-.gap-\[10\%\] {
-  gap: 10%;
-}
-
-.gap-\[10rem\] {
-  gap: 10rem;
+.gap-\[10px\] {
+  gap: 10px;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1716,14 +1708,6 @@ video {
   background-color: rgb(34 211 238 / var(--tw-bg-opacity));
 }
 
-.bg-white\/30 {
-  background-color: rgb(255 255 255 / 0.3);
-}
-
-.bg-black\/60 {
-  background-color: rgb(0 0 0 / 0.6);
-}
-
 .bg-rose-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(251 113 133 / var(--tw-bg-opacity));
@@ -1739,9 +1723,22 @@ video {
   background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
+.bg-white\/30 {
+  background-color: rgb(255 255 255 / 0.3);
+}
+
+.bg-black\/60 {
+  background-color: rgb(0 0 0 / 0.6);
+}
+
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-pink-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 114 182 / var(--tw-bg-opacity));
 }
 
 .decoration-slice {
@@ -1858,6 +1855,11 @@ video {
   padding: 1rem;
 }
 
+.px-\[2rem\] {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .px-\[30\%\] {
   padding-left: 30%;
   padding-right: 30%;
@@ -1866,11 +1868,6 @@ video {
 .py-\[10\%\] {
   padding-top: 10%;
   padding-bottom: 10%;
-}
-
-.px-\[2rem\] {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .py-\[0\.5rem\] {
@@ -1938,13 +1935,13 @@ video {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+.text-\[20rem\] {
+  font-size: 20rem;
+}
+
 .text-9xl {
   font-size: 8rem;
   line-height: 1;
-}
-
-.text-\[20rem\] {
-  font-size: 20rem;
 }
 
 .font-bold {
